[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
axum = "0.7.9"
axum-extra = "0.9.6"
bytes = "1.9.0"
chrono = "0.4.39"
futures-util = "0.3.31"
http = "1.2.0"
hyper = {version ="1.5.1", features = ["full"]}
mime = "0.3.17"
serde_json = "1.0.133"
tokio = {version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.13"
tower = "0.5.2"
tower-http = {version ="0.6.2",features = ["cors"]}

